# Parallel-Computation-2023-Spring

./: CMakeLists.txt  README.docx  output.txt
case1/: distribution80.txt  point1.txt  point2.txt  point3.txt
include/: chazhi.h  diago.h  grid.h  input.h  scalapack_connector.h  timer.h
src/: a.out  chazhi.cpp  grid.cpp  input.cpp  main.cpp  new.cpp  scalapack_diago_calculator.cpp  timer.cpp
test/: INPUT.txt
